welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:21: error: not found: value leur
                 	leur(Color.pink)}
                        ^FlowerPot:36: error: not found: value setPosition
             setPosition(4,3)
             ^FlowerPot:40: error: not found: value setPosition
             setPosition(0,6)}
             ^