welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur (c1:Color) {setCouleurBrosse(c1)
                              baisseBrosse()
                              avance(2)
                              recule()
                              gauche()
                              avance()
                              recule(2)
                              avance()
                      				droite()}
                              



def fleursBord() {fleur(Color.red)
                  avance(4)
                  fleur(Color.cyan)
                 	droite()
                 	avance(4)
                 	fleur(Color.green)
                 	droite()
                 	leur(Color.pink)}
                               
                     
def marque() {baisseBrosse()
              leveBrosse()}   
                      
def pollen() {setCouleurBrosse(Color.yellow)
              for (i<-1 to 4) {
  						marque()
             	avance(4)
  						gauche()}}  


def dessin() {fleursBord()
             pollen()
             setPosition(4,3)
             fleur(Color.orange)
             setCouleurBrosse(Color.yellow)
             marque()
             setPosition(0,6)}
      